<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="searchTopicsVM" type="com.application.app.modules.searchtopics.data.viewmodel.SearchTopicsVM"/>
    </data>
    <LinearLayout android:id="@+id/linearGroup67"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarGroup66"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearGroup65"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLeftIcon"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_left_icon"/>
                <EditText
                    android:background="@drawable/rectangle_bg_black_900_63_radius_10"
                    android:drawablePadding="@dimen/_5pxh"
                    android:drawableStart="@drawable/img_search_bar"
                    android:hint="@string/lbl_search"
                    android:id="@+id/etSearchBar"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_weight="1.7"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={searchTopicsVM.searchTopicsModel.etSearchBarValue}"
                    android:textColorHint="@color/gray_700" style="@style/etSolidRounded"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/scrollViewGroup68"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearGroup64"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_62pxv" android:paddingTop="@dimen/_16pxv">
                <TextView android:gravity="top|start"
                    android:id="@+id/txtExploreTopics"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtExploreTopics}"
                    style="@style/txtPoppinsbold20" tools:text="@string/lbl_explore_topics"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtBooks"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtBooks}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_books"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtFiction"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtFiction}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_fiction"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtComics"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtComics}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_comics"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtArt"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtArt}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_art"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtVisualDesign"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtVisualDesign}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_visual_design"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtTechnology"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtTechnology}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_technology"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtScience"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtScience}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_science"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtBusiness"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtBusiness}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_business"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtPsychology"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtPsychology}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_psychology"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtCreativity"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtCreativity}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_creativity"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtEducation"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtEducation}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_education"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtFeminism"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtFeminism}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_feminism"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtArtificialInte"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtArtificialInte}"
                    style="@style/txtPoppinsregular20" tools:text="@string/msg_artificial_inte"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtHealth"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtHealth}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_health"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtDesign"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:text="@{searchTopicsVM.searchTopicsModel.txtDesign}"
                    style="@style/txtPoppinsregular20" tools:text="@string/lbl_design"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
