<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearBlogDetails"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <TextView android:gravity="top|start" android:id="@+id/txtHome2"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lbl_logo"
            style="@style/txtPoppinssemibold12" tools:text="@string/lbl_logo"/>
        <TextView android:gravity="start" android:id="@+id/txtEasyToUse"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:text="@string/msg_lorem_ipsum_dol5"
            style="@style/txtPoppinssemibold16" tools:text="@string/msg_lorem_ipsum_dol5"/>
        <LinearLayout android:id="@+id/linearReadInfo"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:gravity="top|start"
                android:id="@+id/txtHome3"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" android:layout_width="0dp"
                android:text="@string/lbl_16_days_ago"
                style="@style/txtPoppinsmedium12" tools:text="@string/lbl_16_days_ago"/>
            <View
                android:background="@drawable/rectangle_bg_black_900_87_radius_1_5"
                android:id="@+id/viewDividerCircle"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_3pxh"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_3pxh"/>
            <TextView android:gravity="top|start"
                android:id="@+id/txtHome"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_weight="1.2" android:layout_width="0dp"
                android:text="@string/lbl_3_min_read"
                style="@style/txtPoppinsmedium12" tools:text="@string/lbl_3_min_read"/>
            <ImageView android:id="@+id/imageBookmarkIcon"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_width="@dimen/_13pxh"
                android:scaleType="fitXY" android:src="@drawable/img_bookmark_icon_3"/>
        </LinearLayout>
    </LinearLayout>
</layout>
